# amplihack-agent-eval

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  run_distributed_eval.sh  sitemap.xml
.github/workflows/: ci.yml  docs.yml  issue-classifier.md  pr-triage-agent.md  release.yml
API_REFERENCE/: index.html
CATEGORIES/: index.html
EXTENDING/: index.html
LONG_HORIZON_EVAL/: index.html
adapters/: index.html
architecture/: index.html
azure-hive-qa-eval/: index.html
datasets/: README.md
datasets/5000t-seed42-v1.0/: baseline_results.json  metadata.json
distributed-hive-eval/: index.html
docs/: ADAPTERS.md  API_REFERENCE.md  ARCHITECTURE.md  CATEGORIES.md  EXTENDING.md  LEVELS.md  LONG_HORIZON_EVAL.md  MULTI_AGENT_EVAL.md  azure-hive-qa-eval.md  distributed-hive-eval.md  eval-3175b-question-phase-failure-diagnosis.md  github-models-migration-investigation.md  hive-mind-eval.md  index.md  repeats-eval.md  running-evals.md  self-improvement.md
eval-3175b-question-phase-failure-diagnosis/: index.html
github-models-migration-investigation/: index.html
hive-mind-eval/: index.html
levels/: index.html
multi-agent-eval/: index.html
repeats-eval/: index.html
running-evals/: index.html
search/: search_index.json
self-improvement/: index.html
src/amplihack_eval/: __init__.py  cli.py
src/amplihack_eval/adapters/: __init__.py  base.py  distributed_hive_adapter.py  hive_mind_adapter.py  http_adapter.py  learning_agent.py  remote_agent_adapter.py  subprocess_adapter.py
src/amplihack_eval/azure/: __init__.py  eval_distributed.py  eval_distributed_security.py  eval_monitor.py  eval_retrieval_smoke.py
src/amplihack_eval/core/: __init__.py  continuous_eval.py  grader.py  multi_seed.py  runner.py
src/amplihack_eval/data/: __init__.py  adversarial_scenarios.py  decision_scenarios.py  forgetting_scenarios.py  hive_mind_scenarios.py  long_horizon.py  progressive_levels.py  security_analyst_scenario.py  tool_use_scenarios.py
src/amplihack_eval/datasets/: __init__.py  download.py
src/amplihack_eval/levels/: L01_simple_recall.yaml  L02_multi_source.yaml  L03_temporal.yaml  L04_procedural.yaml  L05_contradiction.yaml  L06_incremental.yaml  L07_teaching.yaml  L08_metacognition.yaml  L09_causal.yaml  L10_counterfactual.yaml  L11_novel_skill.yaml  L12_far_transfer.yaml  L13_tool_selection.py  L14_selective_forgetting.py  L15_adversarial_recall.py  L16_decision_from_memory.py  __init__.py  hive_mind_scoring.py  loader.py  schema.py
src/amplihack_eval/multi_agent_eval/: __init__.py  adversary_agent.py  analyst_agent.py  coordinator.py  grader_agent.py  pipeline.py
src/amplihack_eval/self_improve/: __init__.py  patch_proposer.py  reviewer_voting.py  runner.py
tests/: test_adapters.py  test_confidence_intervals.py  test_continuous_eval.py  test_data_generation.py  test_datasets.py  test_eval_distributed.py  test_eval_monitor.py  test_hive_mind_eval.py  test_multi_agent_eval.py  test_new_levels.py  test_parallel_eval.py  test_quality_audit.py  test_remote_agent_adapter.py  test_yaml_levels.py
