[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplihack-agent-eval"
version = "0.1.0"
description = "Evaluation framework for goal-seeking AI agents: memory recall, tool use, planning, reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.30.0", "openai>=1.0.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
amplihack-eval = "amplihack_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
